# Mini-Project-II

./: .gitignore  traffic_eye_detailed_documentation.txt
FLASK ADMIN/: app.py  reports.db  requirements.txt
FLASK ADMIN/static/: script.js  style.css
FLASK ADMIN/templates/: index.html
HelmetAI/: README.md  build.gradle  gradle.properties  gradlew.bat  local.properties  settings.gradle
HelmetAI/app/: build.gradle
HelmetAI/app/src/main/: AndroidManifest.xml
HelmetAI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
model trainings/: labels.txt  train_anpr.py  train_objdetect.py
model trainings/3riders-2/: README.dataset.txt  README.roboflow.txt  data.yaml
model trainings/3riders-2/test/labels/: 0_d811f3f2_3788_4245_9106_97507dc8feb6_jpeg_jpg.rf.28b21aed91f90b8eaf05737c020cfcb2.txt  102_8263a6df_4cd7_44ef_88b0_366f7038bdbd_jpeg_jpg.rf.86d81373c9810683009f3468bece01b1.txt  103_jpg.rf.dc8c3136171486549559182dbf9eb68d.txt  103_mp4-0008_jpg.rf.7fe2c6106ac17eb2ab6c44feb72f96b7.txt  104_jpg.rf.8fab52c97df17cc11c5376a8fbf4206f.txt  107_jpg.rf.0ceccd0b5d39dc6ad76980e0b9a5b88c.txt  107_jpg.rf.42343402ec5bf03a839bb856084c8d74.txt  109_jpg.rf.343cf59a548e1a2fd893db730948644a.txt  10_1ce9c985_d9f9_4f78_ad07_e33dc09e3687_jpeg_jpg.rf.7f69ad8ac51db18ef01ec3a029e30b07.txt  10_jpg.rf.d644522ed00edeb27095661f8bdd9e2f.txt  10_jpg.rf.d6d214bc2f2d42e44fe04181b2ddcc49.txt  110_jpg.rf.5ffb7f3a8435d2dc63abbd237b8687d4.txt  115_jpg.rf.a09fdaed07bdba2c747e120529b1c5fc.txt  (+232 more)
model trainings/3riders-2/train/: labels.cache
model trainings/3riders-2/valid/: labels.cache
(+5736 files in other folders)
